--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Bricolage+Grotesque:opsz,wght@12..96,200..800&family=Jost:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');
 
+
+
 @import "tailwindcss";
+
 
 :root {
   --prim-color: #e8021f;
@@ -15,3 +18,23 @@
   --transition-regular: 0.3s;
   --transition-slow: 0.6s;
 }
+
+html,
+body {
+  background-color: #111111;
+}
+
+
+@theme {
+  --color-primary: var(--prim-color);
+  --font-family-bricolage: var(--Bricolage-font);
+  --font-family-roboto: var(--Roboto-font);
+  --font-family-jost: var(--Jost-font);
+}
+
+.logo span {
+  @apply text-primary;
+}
+
+/* La clase `.bricolage-font` ya no es necesaria. */
+/* Ahora puedes usar `font-bricolage` directamente en tu HTML/JSX. */
