--- a/src/index.css
+++ b/src/index.css
@@ -35,6 +35,9 @@ body {
   --font-family-jost: var(--Jost-font);
 }
 
+/* Navbar */
+
+
 .logo span {
   @apply text-primary;
 }
@@ -77,5 +80,62 @@ body {
 @media screen and (max-width: 991px) {
   .menu li a::after {
     opacity: 0;
+  }
+}
+
+/* Hero */
+
+.hero-slide {
+  position: relative;
+  z-index: 5;
+}
+
+.hero-slide::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  /* La imagen de fondo ahora se establece mediante una variable CSS en el componente JSX */
+  background-image: var(--hero-bg-image);
+  background-position: center center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  z-index: -1;
+  animation: Anim-zoom 2.5s 1.4s forwards linear;
+}
+/* --- CÓDIGO ANTERIOR (REFERENCIA) --- */
+/*
+.hero-slide2::before {
+  background-image: url(assets/hero-slide-2.webp);
+}
+
+.hero-slide3::before {
+  background-image: url(assets/hero-slide-3.webp);
+}
+*/
+.hero-slide::after {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: #000;
+  opacity: 0.7;
+  z-index: 1;
+}
+
+.hero-content {
+  z-index: 5;
+}
+
+@keyframes Anim-zoom {
+  0% {
+    transform: scale(1);
+  }
+  100% {
+    transform: scale(1.1);
   }
 }
