--- a/src/index.css
+++ b/src/index.css
@@ -258,3 +258,16 @@ body {
   /* border: 2px solid #222;
   background-color: transparent;
 } */
+
+/* cars */
+/* .car-image::after {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: transparent;
+  background-image: linear-gradient(180deg, #02010100 -6%, #1E1F22 94%);
+  z-index: 0;
+} */
