--- a/src/index.css
+++ b/src/index.css
@@ -272,3 +272,22 @@ body {
   z-index: 0;
 } */
 
+.banner-section {
+  width: 100%;
+  background-image: url(assets/hero-slide-2.webp);
+  background-repeat: no-repeat;
+  background-position: center center;
+  background-size: cover;
+  position: relative;
+}
+
+.banner-section::after {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: var(--black-color);
+  opacity: .7;
+}
